[tool.poetry]
name = "injective-py"
version = "1.14.0"
description = "Injective Python SDK, with Exchange API Client"
authors = ["Injective Labs <contact@injectivelabs.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://injectivelabs.org/"
repository = "https://github.com/InjectiveLabs/sdk-python"
documentation = "https://api.injective.exchange/"
keywords = ["injective", "blockchain", "cosmos", "injectivelabs"]
classifiers = [
    "Intended Audience :: Developers",
]
packages = [
    { include = "pyinjective" },
]
include = [
    { path = "pyinjective/proto/**/*.py" },
    { path = "*.ini" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
aiohttp = "^3.9.4" # Version dependency due to https://github.com/InjectiveLabs/sdk-python/security/dependabot/18
bech32 = "*"
bip32 = "*"
ecdsa = "*"
eip712 = "^0.3.0"
eth-pydantic-types = "^0.2.4"
grpcio = "*"
grpcio-tools = "*"
hdwallets = "*"
mnemonic = "*"
protobuf = "^5.26.1"
requests = "*"
safe-pysha3 = "*"
websockets = "*"
web3 = "^7.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "*"
pytest-grpc = "*"
requests-mock = "*"
pytest-cov = ">=4.1.0"
pytest-aioresponses = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.4.0"
ruff = ">=0.4.0"
black = ">=23.9.1"
python-dotenv = ">=1.0.1"


[tool.ruff]
line-length = 120
exclude = ["pyinjective/proto/*", ".idea/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E731"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811"]


[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^pyinjective/proto/.*
  | \.idea/.*
)
'''

[tool.coverage.run]
branch = true
source_pkgs = ["pyinjective"]
omit = ["pyinjective/proto/*"]

[tool.coverage.report]
skip_empty = true
fail_under = 65
precision = 2

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
